--- a/app/src/main/res/layout/ac_main.xml
+++ b/app/src/main/res/layout/ac_main.xml
@@ -18,6 +18,7 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/image"
+                android:scaleType="centerInside"
                 android:layout_width="@dimen/image_width"
                 android:layout_height="@dimen/image_height"
                 android:src="@android:drawable/ic_menu_myplaces"
